--- a/client/src/assets/styles/globals.scss
+++ b/client/src/assets/styles/globals.scss
@@ -3,3 +3,6 @@
 @import "basics/helpers.scss";
 @import "basics/base.scss";
 @import "basics/layout.scss";
+
+// Components
+@import "components/navbar.scss";
